# AutoLearn

./: .gitignore  .uv-cheatsheet.md  CLEANUP_SUMMARY.md  INSTALLATION.md  Makefile  QUICK_START.md  README.md  app.py  config.py  pyproject.toml  requirements.txt
backend/: __init__.py  data_handler.py  ml_predictor.py  ml_trainer.py  profiling.py
tests/: README.md  __init__.py  test_data_handler.py
ui/: __init__.py  download_page.py  inference_page.py  ml_page.py  sidebar.py  upload_page.py
